--- a/generator_gui.ui
+++ b/generator_gui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>613</width>
+    <width>621</width>
     <height>329</height>
    </rect>
   </property>
@@ -30,9 +30,9 @@
   <widget class="QLineEdit" name="file_name">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>110</x>
      <y>150</y>
-     <width>481</width>
+     <width>491</width>
      <height>21</height>
     </rect>
    </property>
@@ -50,7 +50,7 @@
   <widget class="QPushButton" name="browse_btn">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>10</x>
      <y>150</y>
      <width>93</width>
      <height>21</height>
@@ -71,7 +71,7 @@
   <widget class="QLabel" name="browse_label">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>10</x>
      <y>110</y>
      <width>151</width>
      <height>31</height>
@@ -90,7 +90,7 @@
   <widget class="QPushButton" name="generate_btn">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>225</x>
      <y>200</y>
      <width>171</width>
      <height>51</height>
@@ -111,10 +111,10 @@
   <widget class="QLabel" name="title">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>25</y>
-     <width>201</width>
-     <height>41</height>
+     <x>0</x>
+     <y>0</y>
+     <width>621</width>
+     <height>91</height>
     </rect>
    </property>
    <property name="font">
@@ -136,6 +136,9 @@
    <property name="scaledContents">
     <bool>false</bool>
    </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
    <property name="margin">
     <number>0</number>
    </property>
@@ -153,34 +156,12 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="payroll_complete">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>247</x>
-     <y>260</y>
-     <width>140</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial</family>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Payroll Complete!</string>
-   </property>
-  </widget>
   <widget class="QProgressBar" name="prog_bar">
    <property name="geometry">
     <rect>
      <x>160</x>
      <y>270</y>
-     <width>311</width>
+     <width>301</width>
      <height>16</height>
     </rect>
    </property>
@@ -218,7 +199,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="quikmed.qrc">quikmed-logo.png</pixmap>
+    <pixmap>quikmed-logo.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
@@ -227,7 +208,7 @@
   <widget class="QPushButton" name="open_file_btn">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>265</x>
      <y>270</y>
      <width>93</width>
      <height>28</height>
